# fast_zero_sync

./: .gitignore  README.md  pyproject.toml
fast_zero/: app.py  aula_02.py  schemas.py
fast_zero/tests/: conftest.py  test_todos.py
migrations/: env.py
migrations/versions/: aadf456740bc_create_todos_table.py  b7c075660a2e_create_users_table.py
tests/: arf_test_aula_02.py  test_app.py  test_aula_02.py
